--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
-﻿{
+{
     "files.exclude":
     {
         "**/.DS_Store":true,
         "**/.git":true,
+        "**/.gitignore":true,
         "**/.gitmodules":true,
         "**/*.booproj":true,
         "**/*.pidb":true,
@@ -51,5 +52,81 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
+    },
+    
+    "editor.tokenColorCustomizations": 
+    {
+        "[Monolivia]": 
+        {
+            "textMateRules": 
+            [
+                
+                {
+                    "scope": "source.cs entity.name.type.class.cs",
+                    "settings": 
+                    {
+                        "foreground": "#ffa500",
+                        "fontStyle": "bold"
+                    }
+                    
+                },
+                
+                {
+                    "scope": "source.cs entity.name.type.cs",
+                    "settings": 
+                    {
+                        "foreground": "#ffff00",
+                        "fontStyle": ""
+                    }
+                    
+                },
+                
+                {
+                    "scope": "source.cs storage.modifier.cs",
+                    "settings": 
+                    {
+                        "foreground": "#ffbcff",
+                        "fontStyle": ""
+                    }
+                    
+                },
+                
+                {
+                    "scope": "source.cs entity.name.variable.local.cs",
+                    "settings": 
+                    {
+                        "foreground": "#ffffff",
+                        "fontStyle": "italic"
+                    }
+                    
+                },
+                
+                {
+                    "scope": "source.cs entity.name.variable.field.cs",
+                    "settings": 
+                    {
+                        "foreground": "#ffffff",
+                        "fontStyle": "italic"
+                    }
+                    
+                },
+                
+                {
+                    "scope": "source.cs variable.other.readwrite.cs",
+                    "settings": 
+                    {
+                        "foreground": "#ffffff",
+                        "fontStyle": ""
+                    }
+                    
+                }
+                
+                
+                
+                
+                
+            ]
+        }
     }
+    
 }
